package simulator.model;


public class SingleComponent implements IComponentAction {

	public String getName() {
		return "Component";
	}

}
